<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F1F1F1"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="#fff"
        android:gravity="center"
        android:text="学习"
        android:textColor="@color/indicator"
        android:textSize="18sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.2dp"
        android:background="@color/indicator"></View>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.v4.view.ViewPager
                android:id="@+id/study_vp"
                android:layout_width="match_parent"
                android:layout_height="188dp"
                android:background="#fff">

            </android.support.v4.view.ViewPager>

            <RelativeLayout
                android:id="@+id/study_rl1"
                style="@style/study_RelativeLayout"
                android:layout_marginTop="10dp">

                <ImageView
                    android:id="@+id/study_image"
                    style="@style/study_image_left"
                    android:src="@mipmap/ic_bi" />

                <TextView
                    style="@style/study_textview"
                    android:layout_toRightOf="@id/study_image"
                    android:text="@string/stu_text1" />

                <ImageView style="@style/study_image_right" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/study_rl2"
                style="@style/study_RelativeLayout"
                android:layout_marginTop="1dp">

                <ImageView
                    android:id="@+id/study_image2"
                    style="@style/study_image_left"
                    android:src="@mipmap/ic_fuzhi" />

                <TextView
                    style="@style/study_textview"
                    android:layout_toRightOf="@id/study_image2"
                    android:text="@string/stu_text2" />

                <ImageView style="@style/study_image_right" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/study_rl3"
                style="@style/study_RelativeLayout"
                android:layout_marginTop="1dp">

                <ImageView
                    android:id="@+id/study_image3"
                    style="@style/study_image_left"
                    android:src="@mipmap/ic_phone" />

                <TextView
                    style="@style/study_textview"
                    android:layout_toRightOf="@id/study_image3"
                    android:text="@string/stu_text3" />

                <ImageView style="@style/study_image_right" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/study_rl4"
                style="@style/study_RelativeLayout"
                android:layout_marginTop="10dp">

                <ImageView
                    android:id="@+id/study_image4"
                    style="@style/study_image_left"
                    android:src="@mipmap/ic_plane" />

                <TextView
                    style="@style/study_textview"
                    android:layout_toRightOf="@id/study_image4"
                    android:text="@string/stu_text4" />

                <ImageView style="@style/study_image_right" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/study_rl5"
                style="@style/study_RelativeLayout"
                android:layout_marginTop="10dp">

                <ImageView
                    android:id="@+id/study_image5"
                    style="@style/study_image_left"
                    android:src="@mipmap/ic_hushi" />

                <TextView
                    style="@style/study_textview"
                    android:layout_toRightOf="@id/study_image5"
                    android:text="@string/stu_text5" />

                <ImageView style="@style/study_image_right" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/study_rl6"
                style="@style/study_RelativeLayout"
                android:layout_marginTop="1dp">

                <ImageView
                    android:id="@+id/study_image6"
                    style="@style/study_image_left"
                    android:src="@mipmap/ic_zhen" />

                <TextView
                    style="@style/study_textview"
                    android:layout_toRightOf="@id/study_image6"
                    android:text="@string/stu_text6" />

                <ImageView style="@style/study_image_right" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/study_rl7"
                style="@style/study_RelativeLayout"
                android:layout_marginTop="1dp">

                <ImageView
                    android:id="@+id/study_image7"
                    style="@style/study_image_left"
                    android:src="@mipmap/ic_book" />

                <TextView
                    style="@style/study_textview"
                    android:layout_toRightOf="@id/study_image7"
                    android:text="@string/stu_text7" />

                <ImageView style="@style/study_image_right" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/study_rl8"
                style="@style/study_RelativeLayout"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp">

                <ImageView
                    android:id="@+id/study_image8"
                    style="@style/study_image_left"
                    android:src="@mipmap/ic_benzi" />

                <TextView
                    style="@style/study_textview"
                    android:layout_toRightOf="@id/study_image8"
                    android:text="@string/stu_text8" />

                <ImageView style="@style/study_image_right" />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
